[tool.poetry]
name = "capmonster-client-cloud"
version = "0.1.0"
description = "Official python client library for capmonster.cloud captcha recognition service"
authors = ["Andrey Ilyin <andrey.ilyin@zennolab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = "^3.11.10"
pydantic = "^2.10.3"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"